# causal-uplift-engine

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.dashboard  GovindArunNampoothiri_CV.txt  README.md  docker-compose.yml  main.py  pyproject.toml  start.py  start.sh
outputs/: feature_importance.csv  model_metrics.pkl
src/: __init__.py
src/api/: __init__.py  main.py  schemas.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  generator.py
src/models/: __init__.py  t_learner.py
src/visualization/: __init__.py  plots.py
