[project]
name = "causal-uplift-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dowhy>=0.14",
    "econml>=0.16.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "streamlit>=1.53.0",
    "uvicorn[standard]>=0.40.0",
    "xgboost>=3.1.3",
]
